fix: 增加 persistenceSourcePath 非空检查并优化 QueryTransformer 逻辑
1. 为 FormGeneratorMojo 中 queryTransformerConfig 的 persistenceSourcePath 添加非空检查
2. 简化 QueryTransformer 类的返回逻辑，移除冗余的文件写入代码